@@ -1,4 +1,13 @@
 
+7/21/2003   version 0.1.3   Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added javadoc to CustomFileFilter.java
+    * Updated the headers of all the files.
+    * Changed how jsXe saves files so that the XMLDocument class is independent
+      of gui implementation.
+    * Fixed a bug where jsXe didn't update the XMLDocument name in the
+      TabbedView.
+
 7/16/2003   version 0.1.2   Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added javadoc to jsXe.java and TabbedView.java. Added a context menu to
